Fix: Corregido tipo de dato de numero en Habitacion y métodos del repositorio para evitar error de JPA