@@ -1,15 +1,18 @@
 package com.tcg.habitaciones.service;
 
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.List;
-import java.util.stream.Collectors;
+
 import com.tcg.commons.dto.HabitacionRequest;
 import com.tcg.commons.dto.HabitacionResponse;
-import com.tcg.commons.dto.RolResponse;
+import com.tcg.commons.exceptions.ResourceNotFoundException;
 import com.tcg.habitaciones.mapper.HabitacionMapper;
 import com.tcg.habitaciones.model.Habitacion;
 import com.tcg.habitaciones.repository.HabitacionRepository;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -28,33 +31,36 @@ public class HabitacionServiceImpl implements HabitacionService {
         return repository.findAll()
                 .stream()
                 .map(mapper::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public HabitacionResponse obtenerPorId(Long id) {
         Habitacion habitacion = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Habitación no encontrada con id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Habitación no encontrada con id: " + id));
         return mapper.entityToResponse(habitacion);
     }
 
     @Override
-    public HabitacionResponse insertar(HabitacionRequest request) {
-        Habitacion entity = mapper.requestToEntity(request);
+    public HabitacionResponse insertar(HabitacionRequest dto) {
+        if (repository.existsByNumero(dto.numero())) {
+            throw new IllegalArgumentException("El número de habitación ya existe");
+        }
+        Habitacion entity = mapper.requestToEntity(dto);
         return mapper.entityToResponse(repository.save(entity));
     }
 
     @Override
-    public HabitacionResponse actualizar(Long id, HabitacionRequest request) {
+    public HabitacionResponse actualizar(Long id, HabitacionRequest dto) {
         Habitacion existing = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Habitación no encontrada con id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Habitación no encontrada con id: " + id));
 
-        existing.setNumero(request.numero());
-        existing.setTipo(request.tipo());
-        existing.setDescripcion(request.descripcion());
-        existing.setPrecio(request.precio());
-        existing.setCapacidad(request.capacidad());
-        existing.setEstado(request.estado());
+        existing.setNumero(dto.numero());
+        existing.setTipo(dto.tipo().trim());
+        existing.setDescripcion(dto.descripcion().trim());
+        existing.setPrecio(dto.precio());
+        existing.setCapacidad(dto.capacidad());
+        existing.setEstado(dto.estado().trim());
 
         return mapper.entityToResponse(repository.save(existing));
     }
@@ -62,7 +68,7 @@ public class HabitacionServiceImpl implements HabitacionService {
     @Override
     public void eliminar(Long id) {
         Habitacion existing = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Habitación no encontrada con id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Habitación no encontrada con id: " + id));
         repository.delete(existing);
     }
 }
